# tetra

./: .pyup.yml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
tests/: test_task.py  test_tetra.py
tetra/: cli.py
tetra/brokers/: __init__.py  redis.py
tetra/task/: task.py
tetra/tasks/: executor.py  manager.py  result.py  retry.py  task.py
tetra/tools/: __config__.py  assertions.py  serializers.py
tetra/tools/redis/: commands.py
