[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:tetra/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[options]
install_requires =
    Click>=7.0
    redis>=3.4.1
    tenacity
setup_requires =
    pytest-runner==5.2
tests_require =
    pytest>=3
    fakeredis==1.4.0
    pip==20.0.2
    bump2version==1.0.0
    wheel==0.34.2
    watchdog==0.10.2
    flake8==3.7.9
    tox==3.14.6
    coverage==5.0.4
    Sphinx==3.0.0
    twine==3.1.1
    Click==7.1.1
    pytest==5.4.1
    pytest-runner==5.2
    lupa==1.9